# zkevm-circuits

./: Cargo.lock.old  Cargo.toml  rust-toolchain
bus-mapping/: Cargo.toml
bus-mapping/src/: bytecode.rs  circuit_input_builder.rs  error.rs  eth_types.rs  evm.rs  exec_trace.rs  external_tracer.rs  lib.rs  macros.rs  mock.rs  operation.rs  rpc.rs  util.rs
bus-mapping/src/evm/: memory.rs  opcodes.rs  stack.rs  storage.rs
bus-mapping/src/evm/opcodes/: ids.rs  mload.rs  push.rs  sload.rs  stop.rs
bus-mapping/src/exec_trace/: exec_step.rs  parsing.rs
geth-utils/: go.mod  go.sum
geth-utils/gethutil/: trace.go
geth-utils/lib/: lib.go
integration-tests/: Cargo.toml  docker-compose.yml  run.sh
integration-tests/contracts/migrations/output/: Migrations.evm  Migrations.sol_json.ast  combined.json
integration-tests/src/: lib.rs
integration-tests/tests/: rpc.rs
keccak256/: Cargo.toml
keccak256/src/: arith_helpers.rs  gates.rs
keccak256/src/gates/: absorb.rs  base_conversion.rs  base_eval.rs  iota_b13.rs  iota_b9.rs  rho.rs  rho_checks.rs  theta.rs  utils.rs  xi.rs
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: evm_circuit.rs
zkevm-circuits/src/state_circuit/: state.rs
