[package]
name = "bus-mapping"
version = "0.1.0"
edition = "2018"
authors = ["CPerezz <c.perezbaro@gmail.com>"]


[dependencies]
ff = "0.11"
pasta_curves = "0.1"
itertools = "0.10"
serde = {version = "1.0.127", features = ["derive"] }
lazy_static = "1.4"
serde_json = "1.0.66"
hex = "0.4"
geth-utils = { path = "../geth-utils" }
web3 = {version = "0.16", default-features = false}
# bitvec = "=0.22.3"
# ethereum-types = "0.10.0"
fixed-hash = "0.7"
uint = "0.9.1"
subtle = "2.4.1"
impl-serde = "0.3.1"
