[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
ethers-solc = "0.1.0"
serde_json = "1.0.66"

[dev-dependencies]
bus-mapping = { path = "../bus-mapping"}
url = "2.2.2"
tokio = { version = "1.13", features = ["macros"] }
pretty_assertions = "1.0.0"
ethers-providers = "0.6.1"

[features]
default = []
test_rpc = []
