[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
ethers-providers = "0.6.2"
ethers-signers = "0.6.2"
ethers-core = "0.6.2"
ethers-contract = "0.6.2"
ethers-middleware = "0.6.2"
ethers-solc = "0.1.0"
serde_json = "1.0.66"
bus-mapping = { path = "../bus-mapping"}
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
pretty_assertions = "1.0.0"

[features]
default = []
test_rpc = []
